# MathModeling

./: .gitignore
Lab1/: CMakeLists.txt  Cell.cpp  Cell.h  ThermalConductivityEquation.h  VTSFormater.h  header.h  main.cpp
Lab1/MatPrograming-master/: .gitignore
Lab1/MatPrograming-master/lab1/: CMakeLists.txt
Lab1/MatPrograming-master/lab1/Abstract-solver/: CMakeLists.txt
Lab1/MatPrograming-master/lab1/Abstract-solver/include/: AbstractSolver.h
Lab1/MatPrograming-master/lab1/Abstract-solver/src/: AbstractSolver.cpp
Lab1/MatPrograming-master/lab1/Function/: CMakeLists.txt
Lab1/MatPrograming-master/lab1/Function/include/: Function.h  OneDimensionalFunction.h
Lab1/MatPrograming-master/lab1/Function/src/: source.cpp
Lab1/MatPrograming-master/lab1/Matrix/: CMakeLists.txt
Lab1/MatPrograming-master/lab1/Matrix-abstract-solver/: CMakeLists.txt
Lab1/MatPrograming-master/lab1/Matrix-abstract-solver/include/: MatrixAbstractSolver.h
Lab1/MatPrograming-master/lab1/Matrix-abstract-solver/src/: MatrixAbstractSolver.cpp
Lab1/MatPrograming-master/lab1/Matrix-determinant-solver/: CMakeLists.txt
Lab1/MatPrograming-master/lab1/Matrix-determinant-solver/include/: MatrixDeterminantSolver.h
Lab1/MatPrograming-master/lab1/Matrix-determinant-solver/src/: MatrixDeterminantSolver.cpp
Lab1/MatPrograming-master/lab1/Matrix-inverse-solver/: CMakeLists.txt
Lab1/MatPrograming-master/lab1/Matrix-inverse-solver/include/: MatrixInverseSolver.h
Lab1/MatPrograming-master/lab1/Matrix-inverse-solver/src/: MatrixInverseSolver.cpp
Lab1/MatPrograming-master/lab1/Matrix-sylvester-test/: CMakeLists.txt
Lab1/MatPrograming-master/lab1/Matrix-sylvester-test/include/: MatrixSylvesterTest.h
Lab1/MatPrograming-master/lab1/Matrix-sylvester-test/src/: MatrixSylvesterTest.cpp
Lab1/MatPrograming-master/lab1/Matrix/include/: Matrix.h
Lab1/MatPrograming-master/lab1/Matrix/src/: source.cpp
Lab1/MatPrograming-master/lab1/NR/: CMakeLists.txt
Lab1/MatPrograming-master/lab1/NR/include/: NR.h
Lab1/MatPrograming-master/lab1/NR/src/: NR.cpp
Lab1/MatPrograming-master/lab1/Point/: CMakeLists.txt
Lab1/MatPrograming-master/lab1/Point/include/: Point.h
Lab1/MatPrograming-master/lab1/Point/src/: Point.cpp
Lab1/MatPrograming-master/lab1/Simple-polynomial/: CMakeLists.txt
Lab1/MatPrograming-master/lab1/Simple-polynomial-real-roots-boundaries-solver/: CMakeLists.txt
Lab1/MatPrograming-master/lab1/Simple-polynomial-real-roots-boundaries-solver/include/: SimplePolynomialRealRootsBoundariesSolver.h
Lab1/MatPrograming-master/lab1/Simple-polynomial-real-roots-boundaries-solver/src/: SimplePolynomialRealRootsBoundariesSolver.cpp
Lab1/MatPrograming-master/lab1/Simple-polynomial/include/: SimplePolynomial.h
Lab1/MatPrograming-master/lab1/Simple-polynomial/src/: SimplePolynomial.cpp
Lab1/MatPrograming-master/lab1/Utils/: CMakeLists.txt
Lab1/MatPrograming-master/lab1/Utils/include/: Utils.h
Lab1/MatPrograming-master/lab1/Utils/src/: Utils.cpp
Lab1/MatPrograming-master/lab1/include/: Header.h
Lab1/MatPrograming-master/lab1/src/: main.cpp
